# b_hack-chatbot

./: README.md  app.json  package-lock.json  package.json
chatbot/: README.md
chatbot/apps/backend/: .env.example  .gitignore  pyproject.toml
chatbot/apps/backend/app/: main.py  schemas.py
chatbot/apps/backend/app/agents/: coordinator.py  graph.py  prompting.py  registry.py  session_history.py  state.py  subagent_base.py
chatbot/apps/backend/app/agents/subagents/: lost_in_city.py  war_crisis.py
chatbot/apps/backend/app/audio/: transcriber.py
chatbot/apps/backend/app/core/: config.py  openai_client.py  user_profile.py
chatbot/apps/backend/app/db/: repository.py  sqlite_init.py
chatbot/apps/backend/app/ingestion/: chunker.py  embedder.py  ingest.py  loader.py
chatbot/apps/backend/app/rag/: pipeline.py
chatbot/apps/backend/app/vector_store/: milvus_client.py
chatbot/apps/backend/scripts/: chat_cli.py  ingest_knowledge_base.py  init_db.py  init_vector_store.py
chatbot/data/: user_profile.json
chatbot/data/knowledge_base/: alert.md  crisisbox_scenario_templates.md  emergency_backpack_checklist.md  emergency_contacts.md  rag-chatbot-overview.md  regional_alerts_luebeck.md
src/app/: _layout.tsx  index.tsx  profile.tsx
src/components/: rescue-plan-panel.tsx
src/context/: UserContext.tsx
