[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG chatbot backend - MVP"
requires-python = ">=3.11"
dependencies = [
    "pymilvus[milvus_lite]>=2.4.9",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

# Added in later phases (uncomment when you get there):
# "langchain>=0.2.0",
# "langgraph>=0.2.0",

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
